--- a/html/about.html
+++ b/html/about.html
@@ -14,11 +14,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
-<body id="rb-design-home">
+<body >
 
   <!--Header-->
-  <header>
-    <nav class="navbar navbar-dark bg-white fixed-top">
+  <header class="sticky-top">
+    <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
         <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
@@ -62,7 +62,7 @@
 
   <!--Section-->
   <section class="rb-about">
-    <div class="rb-container">
+    <div class="container-fluid">
       <div class="rb-main">
         <div class="row">
           <div class="col-md-6 col-xs-12">
