--- a/html/history.html
+++ b/html/history.html
@@ -51,6 +51,9 @@
   <!--Section-->
   <section>
     <div class="rb-card-container">
+      <div class="w-100">
+        <h1 class="text-center">yest</h1>
+      </div>
       <div class="rb-card">
         <img src="../fotot/history1.jpg" alt="foto1">
         <div class="rb-card-content">
@@ -74,6 +77,9 @@
           <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs. It is not final, 2024 comming with inovations. </p>
           <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/living-room-trends-7552960">Click</a></button>
         </div>
+      </div>
+      <div class="w-100">
+        <h1>asdasyest</h1>
       </div>
       <div class="rb-card">
         <img src="../fotot/history1.jpg" alt="foto1">
