--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,8 @@
 <body id="rb-home-design">
 
   <!--Header-->
-  <header>
-    <nav class="navbar navbar-dark bg-white fixed-top">
+  <header class="sticky-top">
+    <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
         <a class="navbar-brand" href="../html/index.html"><img  src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
@@ -61,6 +61,7 @@
 
   <!--Section-->
   <section>
+    <div class="container">
     <div class="rb-section-text">
       <div class="row">
         <div class="col-md-6 col-xs-12">
@@ -71,6 +72,7 @@
         </div>
       </div>
     </div>
+  </div>
   </section>
 
     <!--Footer-->
