--- a/html/video.html
+++ b/html/video.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="../fotot/video-icon.jpg">
   <script src="../js/video.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-  <script src="../bootstrap/js/bootstrap.js" defer></script>
+  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -16,7 +16,53 @@
 <body id="rb-home-design">
    
   <!--Header-->
-
+  <header class="sticky-top">
+    <nav class="navbar navbar-dark bg-white">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
+        <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="rb-nav-item">
+                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
+              </li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
+              </li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+              </li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
+              </li> 
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
+              </li> 
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark dropdown-toggle" href="#" data-bs-toggle="dropdown">  Treeview menu  </a>
+                <ul class="dropdown-menu">
+                  <li> <a class="dropdown-item" href="#"> Dropdown item 1 </a></li>
+                  <li> <a class="dropdown-item" href="#"> Dropdown item 2 &raquo; </a></li>
+                  <li> <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>                </li>
+                </ul>
+              </li> 
+              <li ckass="rb-nav-item"> 
+                <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
   <!--Section-->
   <section>
     <div class="rb-btn">
