--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/index.html"><img  src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img  src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
