--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="../css/home.css">
-  <link rel="icon" href="../fotot/home-icon.jpg">
-  <script src="../js/home.js" defer></script>
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-  <script src="../bootstrap/js/bootstrap.js"defer></script>
+  <link rel="stylesheet" href="./css/home.css">
+  <link rel="icon" href="./fotot/home-icon.jpg">
+  <script src="./js/home.js" defer></script>
+  <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+  <script src="./bootstrap/js/bootstrap.js"defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -19,7 +19,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img  src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="./index.html"><img  src="./fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,25 +32,25 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark" aria-current="page" href="./html/index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
+                <a class="nav-link text-dark" href="./html/about.html"><i class="fa-solid fa-user"></i> About</a>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+                <a class="nav-link text-dark" href="./html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
+                <a class="nav-link text-dark" href="./html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
               </li> 
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
+                <a class="nav-link text-dark" href="./html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
               </li> 
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+                <a class="nav-link text-dark" href="./html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
               </li> 
               <li class="rb-nav-item"> 
-                <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
+                <a class="nav-link text-dark" href="./html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
               </li>
             </ul>
           </div>
@@ -68,7 +68,7 @@
           <h1>Home Design-<strong> RB'</strong></h1>
         </div>
         <div class="col-md-6 col-xs-12">
-          <img src="../fotot/home1.jpg">
+          <img src="./fotot/home1.jpg">
         </div>
       </div>
     </div>
