--- a/html/video.html
+++ b/html/video.html
@@ -19,7 +19,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark" aria-current="page" href="../index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
@@ -54,7 +54,7 @@
                   <li> <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>                </li>
                 </ul>
               </li> 
-              <li ckass="rb-nav-item"> 
+              <li class="rb-nav-item"> 
                 <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
               </li>
             </ul>
@@ -81,7 +81,7 @@
       <div class="container text-center text-md-center">
         <div class="row text-center text-md-left">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
@@ -127,7 +127,7 @@
           <div class="row align-items-center">
             <div class="col-xs-12">
               <p>&copy; Copyright 2024 All reserved by
-                <a href="#" class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a>
+                <a href="#" class="text-decoration-none text-success"><strong> Rinesa Bislimi</strong></a>
               </p>
             </div>
           </div>
