--- a/html/about.html
+++ b/html/about.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
   <link rel="stylesheet" href="../css/about.css">
   <link rel="icon" href="../fotot/about-icon.jpg">
-  <script src="../js/about.js" defer></script>
   <script src="../bootstrap/js/bootstrap.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
-<body >
+<body id="rb-home-design">
 
   <!--Header-->
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,7 +31,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark" aria-current="page" href="../index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
@@ -90,7 +88,7 @@
       <div class="container text-center text-md-center">
         <div class="row text-center text-md-left">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
@@ -137,7 +135,7 @@
         <div class="row align-items-center">
           <div class="col-xs-12">
             <p>&copy; Copyright 2024 All reserved by
-              <a href="#" class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a>
+              <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
             </p>
           </div>
         </div>
