--- a/html/contact.html
+++ b/html/contact.html
@@ -15,50 +15,63 @@
 <body id="rb-home-design">
    
    <!--Header-->
-   <header>
-      <nav class="navbar navbar-dark bg-white fixed-top">
-         <div class="container-fluid">
-            <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
+   <header class="sticky-top">
+      <nav class="navbar navbar-dark bg-white">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
             <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-              <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active text-dark" aria-current="page" href="../html/home.html"><i class="fa-solid fa-house"></i> Home</a>
+               <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
+                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+               </div>
+               <div class="offcanvas-body">
+                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="rb-nav-item">
+                        <a class="nav-link active text-dark" aria-current="page" href="../index.html"><i class="fa-solid fa-house"></i> Home</a>
                     </li>
-                    <li class="nav-item">
-                       <li><a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a></li>
-                       <li><a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
-                       <li><a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-                       <li><a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
-                       <li><a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
-                       <li><a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
-                     </li>
-                  </ul>
+                    <li class="rb-nav-item">
+                        <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
+                    </li>
+                    <li class="rb-nav-item">
+                       <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+                    </li>
+                    <li class="rb-nav-item">
+                       <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
+                    </li> 
+                     <li class="rb-nav-item">
+                        <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
+                    </li> 
+                    <li class="rb-nav-item">
+                       <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+                    </li> 
+                    <li ckass="rb-nav-item"> 
+                       <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
+                    </li>
+                 </ul>
                </div>
             </div>
          </div>
       </nav>
    </header>
-
+   
    <!--Section-->
    <section>
-      <div class="rb-container">
-        <div class="rb-contact-box">
-            <div class="rb-left"></div>
-            <div class="rb-right">
-               <h2>Contact us</h2>
-               <input type="text" class="rb-field" placeholder="Your name">
-               <input type="email" class="rb-field"  placeholder="Your email">
-               <input type="text" class="rb-field" placeholder="Your phone">
-               <textarea class="rb-field" placeholder="Message"></textarea>
-               <button class="rb-btn"> Send </button>
+      <div class="container">
+        <div class="rb-box">
+           <div class="rb-contact-box">
+               <div class="rb-left"></div>
+                  <div class="rb-right">
+                    <h2>Contact us</h2>
+                    <input type="text" class="rb-field" placeholder="Your name">
+                    <input type="email" class="rb-field"  placeholder="Your email">
+                    <input type="number" class="rb-field" placeholder="Your phone">
+                    <textarea class="rb-field" placeholder="Message"></textarea>
+                    <button class="rb-btn"> Send </button>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
@@ -70,60 +83,60 @@
            <div class="container text-center text-md-center">
                <div class="row text-center text-md-left">
                   <div class="col-md-4 col-xs-12">
-                      <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
-                      <p class="text-transform-uppercase">
-                          <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
-                      </p>
-                      <p>
-                          <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
-                      </p>
-                       <p>
-                          <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
-                       </p>
-                       <p>
-                          <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
-                       </p>
-                    </div>
-                    <div class="col-md-4 col-xs-12">
-                       <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
-                       <p>
-                          <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-                       </p>
-                       <p>
-                          <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-                       </p>
-                       <p>
-                          <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
-                       </p>
-                    </div>
-                    <div class="col-md-4 col-xs-12">
-                       <h5 class="text-uppercase">Social</h5>
-                       <p>
-                          <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-                          <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
-                       </p>
-                       <p>
-                          <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-                          <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
-                        </p>
-                        <p>
-                          <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-                          <i class="fa fa-envelope text-primary"></i> Mail</a>
-                        </p>
-                    </div>
-                </div>
-
-                <hr class="mb-6">
-                <div class="row align-items-center">
-                   <div class="col-xs-12">
-                       <p>&copy; Copyright 2024 All reserved by
-                          <a href="#" class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a>
-                       </p>
-                    </div>
+                     <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+                     <p class="text-transform-uppercase">
+                       <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
+                     </p>
+                     <p>
+                       <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
+                     </p>
+                     <p>
+                       <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+                     </p>
+                     <p>
+                       <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
+                     </p>
+                  </div>
+                  <div class="col-md-4 col-xs-12">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+                    <p>
+                        <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+                    </p>
+                    <p>
+                        <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+                    </p>
+                    <p>
+                        <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+                    </p>
+                  </div>
+                  <div class="col-md-4 col-xs-12">
+                     <h5 class="text-uppercase">Social</h5>
+                     <p>
+                        <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+                        <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+                     </p>
+                     <p>
+                        <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+                        <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+                     </p>
+                     <p>
+                        <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+                        <i class="fa fa-envelope text-primary"></i> Mail</a>
+                     </p>
+                  </div>
+               </div>
+ 
+            <hr class="mb-6">
+            <div class="row align-items-center">
+               <div class="col-xs-12">
+                  <p>&copy; Copyright 2024 All reserved by
+                     <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
+                  </p>
                </div>
             </div>
-        </footer>
-    </footer>
+         </div>
+      </footer>
+   </footer>
 
 </body>
 </html>
