--- a/html/history.html
+++ b/html/history.html
@@ -15,12 +15,11 @@
 <body id="rb-home-design">
 
   <!--Header-->
-  <header>
-    <nav class="navbar navbar-dark bg-white fixed-top">
+  <header class="sticky-top">
+    <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
-        <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
+        <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
@@ -30,16 +29,26 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
+              <li class="rb-nav-item">
+                <a class="nav-link active text-dark" aria-current="page" href="../index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
-              <li class="nav-item">
-                <li><a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a></li>
-                <li><a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
-                <li><a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-                <li><a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
-                <li><a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
-                <li><a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
+              </li>
+              <li class="rb-nav-item">
+               <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+              </li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
+              </li> 
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
+              </li> 
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+              </li> 
+              <li ckass="rb-nav-item"> 
+                <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
               </li>
             </ul>
           </div>
@@ -47,12 +56,12 @@
       </div>
     </nav>
   </header>
-
+ 
   <!--Section-->
-  <section>
+  <section class="rb-history">
     <div class="rb-card-container">
-      <div class="w-100">
-        <h1 class="text-center">yest</h1>
+      <div class="rb-text w-100">
+        <h1 class="text-center mt-2">English</h1>
       </div>
       <div class="rb-card">
         <img src="../fotot/history1.jpg" alt="foto1">
@@ -78,8 +87,8 @@
           <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/living-room-trends-7552960">Click</a></button>
         </div>
       </div>
-      <div class="w-100">
-        <h1>asdasyest</h1>
+      <div class="rb-text w-100">
+        <h1 class="text-center mt-2">Albanian</h1>
       </div>
       <div class="rb-card">
         <img src="../fotot/history1.jpg" alt="foto1">
@@ -161,7 +170,7 @@
         <div class="row align-items-center">
           <div class="col-xs-12">
             <p>&copy; Copyright 2024 All reserved by
-            <a href="#"class="text-decoration-none text-primary-emphasis"><strong> Rinesa Bislimi</strong></a></p>
+            <a href="#"class="text-decoration-none text-success"><strong> Rinesa Bislimi</strong></a></p>
           </div>
         </div>
       </div>
