--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Home</title>
   <link rel="stylesheet" href="./css/home.css">
   <link rel="icon" href="./fotot/home-icon.jpg">
-  <script src="./js/home.js" defer></script>
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
   <script src="./bootstrap/js/bootstrap.js"defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -60,79 +59,80 @@
   </header>
 
   <!--Section-->
-  <section>
-    <div class="container">
+  <section> 
     <div class="rb-section-text">
-      <div class="row">
-        <div class="col-md-6 col-xs-12">
-          <h1>Home Design-<strong> RB'</strong></h1>
-        </div>
-        <div class="col-md-6 col-xs-12">
-          <img src="./fotot/home1.jpg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-xs-12">
+            <h1>Home Design-<strong> RB'</strong></h1>
+          </div>
+          <div class="col-md-6 col-xs-12">
+            <img src="./fotot/home1.jpg">
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </section>
-
-    <!--Footer-->
-    <footer>
-      <footer class="bg-dark text-white pt-5 pb-4">
-        <div class="container text-center text-md-center">
-          <div class="row text-center text-md-left">
-            <div class="col-md-4 col-xs-12">
-              <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
-              <p class="text-transform-uppercase">
-                <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
-              </p>
-              <p>
-                <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
-              </p>
-              <p>
-                <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
-              </p>
-              <p>
-                <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
-              </p>
-            </div>
-            <div class="col-md-4 col-xs-12">
-              <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
-              <p>
-                <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-             </p>
-             <p>
-                <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-             </p>
-              <p>
-               <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
-              </p>
-            </div>
-            <div class="col-md-4 col-xs-12">
-              <h5 class="text-uppercase">Social</h5>
-              <p>
-                <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-                  <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
-              </p>
-              <p>
-                <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-                  <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
-              </p>
-              <p>
-                <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-                  <i class="fa fa-envelope text-primary"></i> Mail</a>
-              </p>
-            </div>
+  
+  <!--Footer-->
+  <footer>
+    <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container text-center text-md-center">
+        <div class="row text-center text-md-left">
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
+            <p class="text-transform-uppercase">
+              <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
+            </p>
+            <p>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
+            </p>
+            <p>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+            </p>
+            <p>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+            <p>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+            </p>
+            <p>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+            </p>
+            <p>
+              <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase">Social</h5>
+            <p>
+              <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+              <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+            </p>
+            <p>
+              <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+              <i class="fa fa-envelope mt-2 text-primary"></i> Mail</a>
+            </p>
+          </div>
         </div>
   
         <hr class="mb-6">
         <div class="row align-items-center">
           <div class="col-xs-12">
             <p>&copy; Copyright 2024 All reserved by
-            <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
+            <a href="#"class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a></p>
           </div>
-       </div>
-    </div>
- </footer>
+        </div>
+      </div>
+    </footer>
+  </footer>
 
 </body>
 </html>
