--- a/html/history.html
+++ b/html/history.html
@@ -75,7 +75,7 @@
         <img src="../fotot/history2.jpg" alt="foto2">
         <div class="rb-card-content">
           <h3>The houses in '2010'</h3>
-          <p>In the America, smart tech began to automate homes, making it possible to turn on lights, adjust the thermostat, and open the blinds through an app. So home appliances have become more and more connected, making life easier and more modern.</p>                            
+          <p>In the America, smart tech began to automate homes, making it possible to turn on lights, adjust the thermostat, and open the blinds through an app. So home appliances have become more and more connected, making life easier and more modern, paving the way for an even smarter future.</p>                            
           <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Click</a></button>
         </div>
       </div>
@@ -83,7 +83,7 @@
         <img src="../fotot/history3.jpg" alt="foto3">
         <div class="rb-card-content">
           <h3>The houses in '2023'</h3>
-          <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs. It is not final, 2024 comming with inovations. </p>
+          <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs. The design of the house marks changes in 2023, while innovations are announced for 2024.</p>
           <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/living-room-trends-7552960">Click</a></button>
         </div>
       </div>
@@ -102,7 +102,7 @@
         <img src="../fotot/history2.jpg" alt="foto2">
         <div class="rb-card-content">
           <h3>Shtëpitë në vitin '2010'</h3>
-          <p>Në Amerikë, teknologjia intelegjente filloi të automatizonte shtëpitë, duke bërë të mundur ndezjen e dritave, rregullimin e termostatit dhe hapjen e blindave përmes një aplikacioni. Pra, pajisjet e shtëpisë janë bërë gjithnjë e më të lidhura, duke e bërë jetën më të lehtë dhe më moderne.</p>
+          <p>Në Amerikë, teknologjia intelegjente filloi të automatizonte shtëpitë, duke bërë të mundur ndezjen e dritave, rregullimin e termostatit dhe hapjen e blindave përmes një aplikacioni. Pra, pajisjet e shtëpisë janë bërë gjithnjë e më të lidhura, duke e bërë jetën më të lehtë dhe më moderne, duke hapur rrugen edhe për një të ardhme më të zgjuar.</p>
           <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Klikoni</a></button>
         </div>
       </div>
@@ -110,7 +110,7 @@
         <img src="../fotot/history3.jpg" alt="foto3">
         <div class="rb-card-content">
           <h3>Shtëpitë në vitin '2023'</h3>
-          <p>Peisazhi i dizajnit të shtëpisë ka pësuar ndryshime të rëndësishme në vitin 2023, duke refletuar një qasje më moderne dhe inovative. Teknologjitë e reja janë integruar pa probleme, duke e bërë shtëpinë tuaj më të zgjuar dhe më të përshtatshme për nevojat e perditshme. Nuk është përfundimtare, 2024 po vjen me risi.</p>
+          <p>Peisazhi i dizajnit të shtëpisë ka pësuar ndryshime të rëndësishme në vitin 2023, duke refletuar një qasje më moderne dhe inovative. Teknologjitë e reja janë integruar pa probleme, duke e bërë shtëpinë tuaj më të zgjuar dhe më të përshtatshme për nevojat e perditshme. Dizajni i shtëpisë shenon ndryshime në 2023, ndersa për 2024 paralajmrohen risi.</p>
           <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/living-room-trends-7552960">Klikoni</a></button>
         </div>
       </div>
