in every page some changes in header and section

--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,6 +41,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History </a></li>
                   <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i> Table</a></li>
+                  <li><a class="dropdown-item" href="../html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
                 </ul>
               </li>
               <li class="rb-nav-item">
@@ -48,9 +49,6 @@
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-              </li> 
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
               </li> 
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
@@ -71,7 +69,7 @@
       <div class="rb-main">
         <div class="row">
           <div class="col-md-6 col-xs-12">
-            <img src="../fotot/image1.jpg" class="img-fluid">
+            <img src="../fotot/about-image.jpg" class="img-fluid">
           </div>
           <div class="col-md-6 col-xs-12">
             <div class="rb-about-text">
@@ -92,18 +90,18 @@
   <!--Footer-->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-center">
-        <div class="row text-center text-md-left">
+      <div class="container text-center">
+        <div class="row text-center">
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
             <p>
-              <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
             </p>
             <p>
-              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/" class="text-decoration-none text-white">Hosting</a>
             </p>
             <p>
               <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
