--- a/html/login.html
+++ b/html/login.html
@@ -76,7 +76,7 @@
               <a href="#" class="rb-forgot-pass">Forgot password?</a>
             </div>
             <div class="rb-field button-type-field">
-              <button>Login</button>
+              <button class="rb-btn">Login</button>
             </div>
             <hr>
             <div class="rb-form-link">
@@ -116,7 +116,7 @@
             <p>
               <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"
                 class="text-decoration-none text-white">Products</a>
-            </p>
+            </p> 
             <p>
               <a href="https://www.dwell.com/discover/interior%20design"
                 class="text-decoration-none text-white">Article</a>
