--- a/html/contact.html
+++ b/html/contact.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-   <script src="../bootstrap/js/bootstrap.js" defer></script>
+   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
 </head>
 
 <body id="rb-home-design">
@@ -18,40 +18,45 @@
    <header class="sticky-top">
       <nav class="navbar navbar-dark bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
-            <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
+            <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
-                  <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                 <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
+                 <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                </div>
                <div class="offcanvas-body">
                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="rb-nav-item">
-                        <a class="nav-link active text-dark" aria-current="page" href="../index.html"><i class="fa-solid fa-house"></i> Home</a>
-                    </li>
-                    <li class="rb-nav-item">
-                        <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
-                    </li>
-                    <li class="rb-nav-item">
-                       <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
-                    </li>
-                    <li class="rb-nav-item">
-                       <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-                    </li> 
+                       <a class="nav-link active text-dark dropdown-toggle" href="../index.html" data-bs-toggle="dropdown" ><i class="fa-solid fa-house"></i> Home</a>
+                       <ul class="dropdown-menu">
+                         <li><a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
+                       </ul>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link text-dark dropdown-toggle" href="../html/about.html" aria-current="page" aria-expended="false"><i class="fa-solid fa-user"></i> About</a>
+                       <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History</a></li>
+                          <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
+                          <li><a class="dropdown-item" href="../html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
+                        </ul>
+                     </li>
                      <li class="rb-nav-item">
-                        <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
-                    </li> 
-                    <li class="rb-nav-item">
+                       <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+                     </li>
+                     <li class="rb-nav-item">
+                       <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
+                     </li> 
+                     <li class="rb-nav-item">
                        <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
-                    </li> 
-                    <li ckass="rb-nav-item"> 
+                     </li> 
+                     <li class="rb-nav-item"> 
                        <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
                     </li>
                  </ul>
-               </div>
+              </div>
             </div>
          </div>
       </nav>
@@ -69,7 +74,7 @@
                     <input type="email" class="rb-field"  placeholder="Your email">
                     <input type="number" class="rb-field" placeholder="Your phone">
                     <textarea class="rb-field" placeholder="Message"></textarea>
-                    <button class="rb-btn"> Send </button>
+                    <button class="rb-btn">Send</button>
                   </div>
                </div>
             </div>
@@ -79,52 +84,52 @@
 
    <!--Footer-->
    <footer>
-       <footer class="bg-dark text-white pt-5 pb-4">
-           <div class="container text-center text-md-center">
-               <div class="row text-center text-md-left">
-                  <div class="col-md-4 col-xs-12">
-                     <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
-                     <p class="text-transform-uppercase">
-                       <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
-                     </p>
-                     <p>
-                       <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
-                     </p>
-                     <p>
-                       <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
-                     </p>
-                     <p>
-                       <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
-                     </p>
-                  </div>
-                  <div class="col-md-4 col-xs-12">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
-                    <p>
-                        <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-                    </p>
-                    <p>
-                        <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-                    </p>
-                    <p>
-                        <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
-                    </p>
-                  </div>
-                  <div class="col-md-4 col-xs-12">
-                     <h5 class="text-uppercase">Social</h5>
-                     <p>
-                        <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-                        <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
-                     </p>
-                     <p>
-                        <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-                        <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
-                     </p>
-                     <p>
-                        <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-                        <i class="fa fa-envelope text-primary"></i> Mail</a>
-                     </p>
-                  </div>
+      <footer class="bg-dark text-white pt-5 pb-4">
+         <div class="container text-center">
+            <div class="row text-center">
+               <div class="col-md-4 col-xs-12">
+                  <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+                  <p class="text-transform-uppercase">
+                     <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
+                  </p>
+                 <p>
+                    <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
+                  </p>
+                  <p>
+                     <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+                  </p>
+                  <p>
+                     <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
+                  </p>
                </div>
+               <div class="col-md-4 col-xs-12">
+                  <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+                  <p>
+                     <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+                  </p>
+                  <p>
+                     <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+                  </p>
+                 <p>
+                     <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+                  </p>
+               </div>
+               <div class="col-md-4 col-xs-12">
+                  <h5 class="text-uppercase">Social</h5>
+                  <p>
+                     <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+                     <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+                  </p>
+                  <p>
+                     <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+                     <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+                  </p>
+                  <p>
+                    <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+                    <i class="fa fa-envelope text-primary"></i> Mail</a>
+                  </p>
+               </div>
+            </div>
  
             <hr class="mb-6">
             <div class="row align-items-center">
