--- a/html/services.html
+++ b/html/services.html
@@ -83,22 +83,22 @@
       <div class="carousel-item">
         <img src="../fotot/service2.jpg " class="d-block w-100 alt" alt="foto2">
         <div class="carousel-caption d-md-block">
-          <h5 class="text-white font-weight-bold rb-section">Kitchen</h5>
-          <p class="text-white rb-section">The kitchen, the heart of the home, is where delicious aromas intertwine with shared laughter. It's design balances functionality and style, offering a space where culinary creations come to life.</p>
+          <h5 class="text-dark font-weight-bold rb-section">Kitchen</h5>
+          <p class="text-dark rb-section">The kitchen, the heart of the home, is where delicious aromas intertwine with shared laughter. It's design balances functionality and style, offering a space where culinary creations come to life.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../fotot/service3.jpg" class="d-block w-100" alt="foto3">
         <div class="carousel-caption d-md-block">
-          <h5 class="text-white font-weight-bold rb-section">Bathroom</h5>
-          <p class="text-white rb-section">Thoughtful design elements, such as soft lighting and calming color schemes, contribute to a spa-like ambiance. It's a space where simplicity meets luxury, creating a refreshing sanctuary where one can unwind and recharge. </p>
+          <h5 class="text-dark font-weight-bold rb-section">Bathroom</h5>
+          <p class="text-dark rb-section">Thoughtful design elements, such as soft lighting and calming color schemes, contribute to a spa-like ambiance. It's a space where simplicity meets luxury, creating a refreshing sanctuary where one can unwind and recharge. </p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../fotot/service4.jpg" class="d-block w-100" alt="foto4">
         <div class="carousel-caption d-m-block">
-          <h5 class="text-white font-weight-bold rb-section">Bedroom</h5>
-          <p class="text-white rb-section">The bedroom is a sanctuary for rest and rejuvenation, a personal haven where comfort and tranquility converge. It's design focuses on creating a serene atmosphere conducive to relaxation and sleep. </p>
+          <h5 class="text-dark font-weight-bold rb-section">Bedroom</h5>
+          <p class="text-dark rb-section">The bedroom is a sanctuary for rest and rejuvenation, a personal haven where comfort and tranquility converge. It's design focuses on creating a serene atmosphere conducive to relaxation and sleep. </p>
         </div>
       </div>
       <div class="carousel-item">
