--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="./css/home.css">
-  <link rel="icon" href="./fotot/home-icon.jpg">
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="icon" href="./fotot/navbar-icon.jpg">
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
-  <script src="./bootstrap/js/bootstrap.js"defer></script>
+  <script src="./bootstrap/js/bootstrap.bundle.min.js"defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -18,9 +18,8 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img  src="./fotot/home-icon.jpg"></a>
-        <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="./index.html"><img src="./fotot/navbar-icon.jpg"></a>
+        <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
@@ -31,19 +30,24 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="./html/index.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark dropdown-toggle" href="./index.html" data-bs-toggle="dropdown" ><i class="fa-solid fa-house"></i> Home</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
+                </ul>
               </li>
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="./html/about.html"><i class="fa-solid fa-user"></i> About</a>
+              <li class="nav-item">
+                <a class="nav-link text-dark dropdown-toggle" href="./html/about.html" aria-current="page" aria-expended="false"><i class="fa-solid fa-user"></i> About</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History</a></li>
+                  <li><a class="dropdown-item" href="./html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
+                  <li><a class="dropdown-item" href="./html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
+                </ul>
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="./html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="./html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-              </li> 
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="./html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
               </li> 
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="./html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
@@ -60,14 +64,14 @@
 
   <!--Section-->
   <section> 
-    <div class="rb-section-text">
+    <div class="rb-section-contain">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-xs-12">
-            <h1>Home Design-<strong> RB'</strong></h1>
+            <h1>Home Design-<strong><em> RB' </em></strong></h1>
           </div>
           <div class="col-md-6 col-xs-12">
-            <img src="./fotot/home1.jpg">
+            <img src="./fotot/index-image.jpg">
           </div>
         </div>
       </div>
@@ -77,8 +81,8 @@
   <!--Footer-->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-center">
-        <div class="row text-center text-md-left">
+      <div class="container text-center">
+        <div class="row text-center">
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
@@ -88,7 +92,7 @@
               <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
             </p>
             <p>
-              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/" class="text-decoration-none text-white">Hosting</a>
             </p>
             <p>
               <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
